# Data-Science-Portafolio

./: .gitattributes  .gitignore  Aussie_Rain.ipynb  EPL_Teams.ipynb  Flight_Price.ipynb  NN_Sentiment_Analysis.ipynb  README.md  Superstore_Sales_Analysis.ipynb  US-Accidents.ipynb  Ultra-Marathon.ipynb
01_AI-ML_Customer_Churn/: README.md  environment.yml  pyproject.toml
01_AI-ML_Customer_Churn/data/interim/: customer_churn_summary.csv
01_AI-ML_Customer_Churn/data/processed/: cleaned_customer_churn.csv  customer_churn_summary_embeddings.csv
01_AI-ML_Customer_Churn/models/: feature_names.txt  label_encoder.pkl  metadata.json  model_deployment.txt  scaler.pkl  xgb_churn_model.json  xgb_churn_model.pkl
01_AI-ML_Customer_Churn/references/: folder_structure.txt
01_AI-ML_Customer_Churn/reports/: adaptability_enhancement.md  model_deployment.md  model_performance.md  scalability_enhancement.md
01_AI-ML_Customer_Churn/src/config/: factories.py  logger.py  settings.py
01_AI-ML_Customer_Churn/src/data/: make_dataset.py
01_AI-ML_Customer_Churn/src/models/: data_processing.py  main.py  model_training.py  predict_model.py  train_model.py
04_Sentiment_Analysis_Amazon_Alexa_Reviews/: .gitattributes  .gitignore  0.26.0  README.md  api.py  pyproject.toml  sentiment_predictions.csv
04_Sentiment_Analysis_Amazon_Alexa_Reviews/data/interim/: test.csv  train.csv
04_Sentiment_Analysis_Amazon_Alexa_Reviews/data/processed/: test_features.csv  train_features.csv
04_Sentiment_Analysis_Amazon_Alexa_Reviews/models/: vectorizer.pkl  xgb_model.pkl
04_Sentiment_Analysis_Amazon_Alexa_Reviews/models/distilbert_model/distilbert_3class_model/: config.json
04_Sentiment_Analysis_Amazon_Alexa_Reviews/notebooks/: distlbert.ipynb
04_Sentiment_Analysis_Amazon_Alexa_Reviews/references/: folder_structure.txt
04_Sentiment_Analysis_Amazon_Alexa_Reviews/reports/: distilbert_notes.md  model_performance.md
04_Sentiment_Analysis_Amazon_Alexa_Reviews/src/data/: make_dataset.py
04_Sentiment_Analysis_Amazon_Alexa_Reviews/src/features/: build_features.py
04_Sentiment_Analysis_Amazon_Alexa_Reviews/src/models/: predict_model.py  train_distilbert.py  train_model.py
04_Sentiment_Analysis_Amazon_Alexa_Reviews/src/visualization/: visualize.py
04_Sentiment_Analysis_Amazon_Alexa_Reviews/static/: index.html
08_Time_Series_Projects/Time_Series_sktime/: README.md  pyproject.toml
08_Time_Series_Projects/Time_Series_sktime/data/interim/: sales_ts.csv  total_sales.csv
08_Time_Series_Projects/Time_Series_sktime/data/processed/subcategories/: subcategory_0.csv  subcategory_10.csv  subcategory_11.csv  subcategory_12.csv  subcategory_16.csv  subcategory_3.csv  subcategory_4.csv  subcategory_6.csv  subcategory_7.csv
08_Time_Series_Projects/Time_Series_sktime/models/prophet/: params.pkl
08_Time_Series_Projects/Time_Series_sktime/models/sktime/: metrics.json
08_Time_Series_Projects/Time_Series_sktime/models/xgboost/: forecasts.csv
08_Time_Series_Projects/Time_Series_sktime/references/: folder_structure.txt
08_Time_Series_Projects/Time_Series_sktime/reports/: project_steps.txt  subcategory_notebook.md
08_Time_Series_Projects/Time_Series_sktime/sales-forecasting/data/interim/: total_sales.csv
08_Time_Series_Projects/Time_Series_sktime/sales-forecasting/models/prophet/: forecasts.csv  metrics.json
08_Time_Series_Projects/Time_Series_sktime/sales-forecasting/models/sktime/: forecasts.csv
08_Time_Series_Projects/Time_Series_sktime/sales-forecasting/notebooks/: 1.0-eda-total-sales.ipynb
08_Time_Series_Projects/Time_Series_sktime/sales-forecasting/reports/: prophet_overview.md  subcategories.md  tune_forecaster.md
08_Time_Series_Projects/Time_Series_sktime/src/data/: make_dataset.py
12_Employee_Attrition/: .gitignore  Dockerfile.api  Dockerfile.batch  README.md  app.py  index.html  pyproject.toml  requirements.txt
12_Employee_Attrition/.devcontainer/: devcontainer.json
12_Employee_Attrition/.github/workflows/: deploy.yml
12_Employee_Attrition/data/predictions/: predictions.csv
12_Employee_Attrition/data/processed/: X_test.csv  X_train.csv
12_Employee_Attrition/mlruns/0/: meta.yaml
12_Employee_Attrition/models/: LogisticRegression.pkl  XGBoost.pkl  scaler.pkl
12_Employee_Attrition/references/: folder_structure.txt
12_Employee_Attrition/reports/: 00_project_overview.md  01_business_understanding.md  02_data_understanding.md  05_modeling_experiments.md  07_model_deployment.md  API_setup.md  AWS_deploy.md  business_understanding.md  containers.md  data_issue_log.md  data_preparation.md  eda_insights.md  model_evaluation.md  modeling_experiments.md  prediction_analysis.md  project_overview.md
12_Employee_Attrition/src/data/: data_cleaning.py  hipothesis_testing.py
12_Employee_Attrition/src/features/: feature_engineering.py
12_Employee_Attrition/src/models/: predict_model.py  train_model.py
12_Employee_Attrition/src/visualization/: visualize.py
(+148 files in other folders)
