[project]
name = "alexa-sentiment-analysis"
version = "0.1.0"
description = "Sentiment analysis for Amazon Alexa reviews using DistilBERT, Random Forest, and XGBoost"
readme = "README.md"
requires-python = ">=3.11.9,<3.12"
dependencies = [
    "numpy>=1.23.5",
    "pandas>=1.5.3",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.2",
    "nltk>=3.8.1",
    "scikit-learn==1.4.2",
    "xgboost==2.1.1",
    "wordcloud>=1.8.2",
    "tqdm>=4.64.1",
    "torch==2.5.0",
    "transformers==4.49.0",
    "accelerate==1.5.2",
    "scipy>=1.10.0",
    "pickle-mixin>=1.0.2",
    "regex>=2022.10.31",
    "nlpaug>=1.1.11",
    "textblob>=0.17.1",
    "optuna>=3.6.1",
    "contractions>=0.1.73",
    "vaderSentiment>=3.3.2",
    "imbalanced-learn>=0.12.3",
    "flask>=3.0.3",
    "uvicorn>=0.30.6",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "pytest>=7.4.0",
    "black>=24.4.2",
    "isort>=5.13.2",
]

[project.scripts]
preprocess = "python src/data/make_dataset.py"
build-features = "python src/features/build_features.py"
train = "python src/models/train_model.py"
train-distilbert = "python src/models/train_distilbert.py"
predict = "python src/models/predict_model.py"
deploy = "python api.py"
