[project]
name = "employee-attrition"
version = "0.1.0"
description = "Machine learning project to predict employee attrition using IBM HR Analytics dataset"
authors = [{ name = "Sebastian Garrido", email = "sebastiangarrido2790@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",  
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "mlflow>=2.12.2",       
    "xgboost>=2.0.3",      
    "shap>=0.41.0",        
    "imbalanced-learn>=0.10.0",
    "joblib>=1.4.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py"]  # Explicitly include app.py in the root directory