[project]
name = "sales-forecasting"
version = "0.1.0"
description = "Time series forecasting for daily sales data using Prophet, sktime, and XGBoost"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "prophet>=1.1.5",
    "sktime>=0.26.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "scipy>=1.13.0",
    "holidays>=0.50",
    "scikit-learn>=1.5.0",
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "joblib>=1.4.0",
    "plotly>=5.22.0",
    "statsmodels>=0.14.0",
    "sktime>=0.26.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]